argocd/argocd-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"

spec:
  rules:
  - host: argocd.192.168.64.54.xip.io
    http:
      paths:
      - backend:
          serviceName: argocd-server
          servicePort: https

# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: argocd-server-ingress
#   namespace: argocd
#   annotations:
#     cert-manager.io/cluster-issuer: letsencrypt-prod
#     kubernetes.io/ingress.class: nginx
#     kubernetes.io/tls-acme: "true"
#     nginx.ingress.kubernetes.io/ssl-passthrough: "true"
#     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
# spec:
#   rules:
#   - host: argocd.192.168.64.54.xip.io
#     http:
#       paths:
#       - backend:
#           serviceName: argocd-server
#           servicePort: https
#         path: /
#   tls:
#   - hosts:
#     - argocd.example.com
#     secretName: argocd-secret
